--- a/game/index.html
+++ b/game/index.html
@@ -11,6 +11,16 @@
 
   <div id="gui"></div>
   <div id="gameContainer"></div>
+  <div id="help">
+    <h2>git --help</h2>
+    <h3>Controls</h3>
+    <ul>
+      <li>Use W,A,S,D or Cursor keys to move your ship around.</li>
+      <li>Use SPACEBAR or left mouse button to shoot.</li>
+    </ul>
+    <h3>Power Ups</h3>
+    <span></span>
+  </div>
 
 	<script type="text/javascript">
 		window.onload = function() {
