--- a/game/index.html
+++ b/game/index.html
@@ -19,7 +19,7 @@
       <li>Use SPACEBAR or left mouse button to shoot.</li>
     </ul>
     <h3>Power Ups</h3>
-    <span></span>
+    <span>Why don't you find out for yourself...</span>
   </div>
 
 	<script type="text/javascript">
